<resources>
    <string name="app_name">MyApp_April_2022</string>
    <string name="Login">Введите Логин</string>
    <string name="Password">Введите Пароль</string>
    <string name="Enter">Войти</string>
    <string name="Enter_to_system">Вход в Систему</string>
    <string name="Registration">Зарегистрируйтесь, если у вас нет учетной записи</string>
    <string name="Remind_password">Забыли пароль?</string>
    <string name="Success_enter">Вы успешно вошли в систему</string>
    <string name="Back">Выйти</string>
</resources>