<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_to_image_85_dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_no_photo" />

        <TextView
            android:id="@+id/enter_to_system_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Enter_to_system"
            android:textSize="@dimen/text_size_20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/success_login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Success_enter"
            android:textSize="@dimen/text_size_20dp"
            android:visibility="invisible" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_35_dp"
            android:layout_marginRight="@dimen/margin_35_dp"
            android:backgroundTint="@color/color_gold"
            android:hint="@string/Login" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_35_dp"
            android:layout_marginRight="@dimen/margin_35_dp"
            android:backgroundTint="@color/color_gold"
            android:hint="@string/Password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enter_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_35_dp"
            android:layout_marginRight="@dimen/margin_35_dp"
            android:backgroundTint="@color/color_gold"
            android:text="@string/Enter"
            android:textSize="@dimen/text_size_20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registration_link_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_35_dp"
            android:layout_marginRight="@dimen/margin_35_dp"
            android:text="@string/Registration"
            android:textColor="@color/color_gold"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/remind_password_link_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_35_dp"
            android:layout_marginRight="@dimen/margin_35_dp"
            android:text="@string/Remind_password"
            android:textColor="@color/color_gold"
            android:textIsSelectable="true" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressBackgroundTint="@color/color_gold"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_55_dp"
            android:layout_marginRight="@dimen/margin_55_dp"
            android:backgroundTint="@color/color_gold"
            android:text="@string/Back"
            android:textSize="@dimen/text_size_20dp"
            android:textStyle="bold"
            android:visibility="invisible" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>